test/classes/ferguson/const-override-bug.good
const-override-bug.chpl:16: error: overriding method with field
